--- a/index.html
+++ b/index.html
@@ -368,104 +368,44 @@
 .mobile-select-popup .opt:hover { background: rgba(255,255,255,0.03); }
 
     /* —————— Media query para móviles (≤780px) —————— */
+@media (max-width: 780px) {
+  header {
+    padding: 0.6rem 0.9rem;
+    gap: 0.5rem;
+    align-items: center;
+  }
+  .results-wrapper { margin-left: 0.35rem; }
+  .grid { gap: 0.6rem; grid-template-columns: repeat(3, 1fr); }
+  .card { aspect-ratio: 2 / 3; }
+  .card img { object-fit: contain; }
+  .results-panel { right: auto; left: 0; top: calc(100% + .4rem); min-width: 220px; max-width: 320px; }
+}
 
-    @media (max-width:780px){
-      .container{ margin:1rem auto 1rem; padding:0 0.9rem; }
-      .grid{ gap:0.6rem; grid-template-columns:repeat(3,1fr);}
-      .card{ aspect-ratio:2/3; }
+/* ajuste extra para pantallas muy pequeñas (≤420px) */
+@media (max-width: 420px) {
+  header > :not(h1):not(.results-wrapper) {
+    flex: 0 0 calc(50% - 0.35rem);
+    max-width: calc(50% - 0.35rem);
+  }
+  .card img {
+    height: 160px;
+    object-fit: contain;
+  }
+  /* en pantallas muy pequeñas, reducimos aún más el badge para que quepa junto al título */
+  .results-badge { padding:.28rem .46rem; font-size:0.72rem; gap:.4rem; }
+  .results-text .label{ font-size:0.56rem; }
+  .results-text .count{ font-size:0.82rem; }
+  /* Si la pantalla es extremadamente angosta, el panel volverá a alinearse a la derecha */
+  .results-panel { left: auto; right: 0; top: calc(100% + .35rem); min-width:200px; max-width:260px; }
 
-      /* --- REDUCIR selects / inputs sólo en móviles --- */
-      header select, header input {
-        padding: .35rem .6rem;
-        font-size: .88rem;
-      }
-      /* popup de selects más compacto */
-      .mobile-select-popup {
-        max-height: 140px;
-        font-size: 0.84rem;
-      }
-      .mobile-select-popup .opt {
-        padding: .16rem .3rem;
-        font-size: 0.78rem;
-      }
-      /* badge compacto en móvil */
-      .results-badge { padding:.36rem .6rem; font-size:0.84rem; gap:.4rem; }
-    }
-
-    /* Header */
-    header{
-      position:sticky; top:0; padding:1rem 2rem;
-      display:flex; align-items:center; gap:1rem;
-      background:rgba(0,0,0,0.7); backdrop-filter:blur(5px);
-      z-index:10; transition:background .3s;
-      /* permitimos que otros elementos puedan envolver, pero protegeremos el título */
-      flex-wrap:wrap;
-    }
-
-    header.scrolled{background:rgba(0,0,0,0.95);}
-    /* Título + logo: forzar que se mantengan en la misma línea siempre */
-    header h1{
-      cursor:pointer;
-      font-size:1.8rem;
-      font-weight: 800;
-
-      background: linear-gradient(135deg, #00fff7, #ff00cc, #ffd700);
-      background-size:300% 300%;
-      -webkit-background-clip:text;
-      background-clip:text;
-      -webkit-text-fill-color:transparent;
-      display:flex; align-items:center; gap:.6rem;
-      flex:0 0 auto;             /* evita que el h1 se reduzca/encole o salte a otra línea */
-      white-space:nowrap;        /* evita el quiebre de línea entre logo y texto */
-      animation: gradientMove 6s ease infinite, fadeIn 2s ease-in-out;
-    }
-
-    /* Logo pequeño al lado del título */
-    header h1 img#logo {
-      width:42px;
-      height:42px;
-      object-fit:contain;
-      border-radius:6px;
-      background:transparent;
-      display:block;
-    }
-    header select, header input{
-      padding:.5rem 1rem; border:none; border-radius:5px;
-      font-size:1rem; transition:box-shadow .3s;
-      background:rgba(255,255,255,0.9); color:#000;
-    }
-    header select:focus, header input:focus{
-      box-shadow:0 0 8px #0ff;
-    }
-    #search{width:200px;}
-    .container{max-width:1200px;margin:6rem auto 2rem;padding:0 2rem;}
-    .grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(180px,1fr));gap:1.5rem;}
-    .card{
-      opacity:0; transform:translateY(30px);
-      transition:all .6s ease-out; cursor:pointer;
-      border-radius:10px; overflow:hidden; position:relative;
-      will-change: opacity, transform;
-    }
-    .card.visible{opacity:1;transform:translateY(0);}
-    .card img{
-      width:100%; display:block;
-      filter:brightness(100%);
-      transition:transform .4s,filter .4s;
-    }
-    .card:hover img{
-      transform:scale(1.05); filter:brightness(75%);
-    }
-    .info{
-      position:absolute; bottom:0; left:0; right:0;
-      background:rgba(0,0,0,0.7); padding:.75rem;
-      transform:translateY(100%); transition:transform .3s;
-    }
-    .card:hover .info{transform:translateY(0);}
-    .info strong{display:block;font-size:1.05rem;margin-bottom:.25rem;}
-    .info span{
-      background:#0ff; color:#000;
-      padding:2px 6px; border-radius:4px; font-size:.85rem;
-    }
+  /* reduces aún más selects/inputs en pantallas muy pequeñas */
+  header select, header input {
+    padding: .24rem .4rem;
+    font-size: .82rem;
+  }
+  .mobile-select-popup { max-height: 140px; font-size: 0.82rem; }
+  .mobile-select-popup .opt { padding: .18rem .3rem; font-size: 0.78rem; }
+}
 
     /* Animación del gradiente para el título (Archinime) */
     @keyframes gradientMove {
