--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
       font-family:sans-serif;
       color:#fff;
     }
+
+    /* -------------------------
+       REDUCCIÓN DE rem SOLO PARA MÓVILES
+       (configura la base de rem aquí; no cambia nada en desktop)
+    --------------------------*/
+    @media (max-width: 780px) {
+      /* reduce rem base para móviles (ej: 1rem = 14px) */
+      html { font-size: 14px; }
+    }
+    @media (max-width: 420px) {
+      /* ajuste adicional para pantallas muy pequeñas (ej: 1rem = 13px) */
+      html { font-size: 13px; }
+    }
+
     /* Fondo galaxia (poster + vídeo) */
     #bg-video{
       position:fixed;
@@ -339,73 +353,73 @@
       pointer-events:none;
     }
     @keyframes shimmerMove { to { left:120%; } }
-/* --- Popup compacto para selects (fuera del @media, en el mismo <style>) --- */
-.mobile-select-popup {
-  position: absolute;
-  z-index: 1200;
-  background: rgba(2,2,6,0.98);
-  border:1px solid rgba(255,255,255,0.04);
-  border-radius:8px;
-  box-shadow:0 20px 50px rgba(0,0,0,0.6);
-  max-height: 200px;     /* más compacto: no ocupa toda la pantalla */
-  min-width: 140px;
-  overflow:auto;
-  padding: 0.25rem;
-  font-size: 0.92rem;
-}
+    /* --- Popup compacto para selects (fuera del @media, en el mismo <style>) --- */
+    .mobile-select-popup {
+      position: absolute;
+      z-index: 1200;
+      background: rgba(2,2,6,0.98);
+      border:1px solid rgba(255,255,255,0.04);
+      border-radius:8px;
+      box-shadow:0 20px 50px rgba(0,0,0,0.6);
+      max-height: 200px;     /* más compacto: no ocupa toda la pantalla */
+      min-width: 140px;
+      overflow:auto;
+      padding: 0.25rem;
+      font-size: 0.92rem;
+    }
 
-/* Opciones dentro del popup más compactas */
-.mobile-select-popup .opt {
-  padding: .28rem .45rem;
-  border-radius:6px;
-  margin: .08rem 0;
-  font-size:0.92rem;
-  line-height:1.05;
-  cursor:pointer;
-}
-.mobile-select-popup .opt[aria-selected="true"],
-.mobile-select-popup .opt.selected { font-weight:700; }
-.mobile-select-popup .opt:hover { background: rgba(255,255,255,0.03); }
+    /* Opciones dentro del popup más compactas */
+    .mobile-select-popup .opt {
+      padding: .28rem .45rem;
+      border-radius:6px;
+      margin: .08rem 0;
+      font-size:0.92rem;
+      line-height:1.05;
+      cursor:pointer;
+    }
+    .mobile-select-popup .opt[aria-selected="true"],
+    .mobile-select-popup .opt.selected { font-weight:700; }
+    .mobile-select-popup .opt:hover { background: rgba(255,255,255,0.03); }
 
     /* —————— Media query para móviles (≤780px) —————— */
-@media (max-width: 780px) {
-  header {
-    padding: 0.6rem 0.9rem;
-    gap: 0.5rem;
-    align-items: center;
-  }
-  .results-wrapper { margin-left: 0.35rem; }
-  .grid { gap: 0.6rem; grid-template-columns: repeat(3, 1fr); }
-  .card { aspect-ratio: 2 / 3; }
-  .card img { object-fit: contain; }
-  .results-panel { right: auto; left: 0; top: calc(100% + .4rem); min-width: 220px; max-width: 320px; }
-}
+    @media (max-width: 780px) {
+      header {
+        padding: 0.6rem 0.9rem;
+        gap: 0.5rem;
+        align-items: center;
+      }
+      .results-wrapper { margin-left: 0.35rem; }
+      .grid { gap: 0.6rem; grid-template-columns: repeat(3, 1fr); }
+      .card { aspect-ratio: 2 / 3; }
+      .card img { object-fit: contain; }
+      .results-panel { right: auto; left: 0; top: calc(100% + .4rem); min-width: 220px; max-width: 320px; }
+    }
 
-/* ajuste extra para pantallas muy pequeñas (≤420px) */
-@media (max-width: 420px) {
-  header > :not(h1):not(.results-wrapper) {
-    flex: 0 0 calc(50% - 0.35rem);
-    max-width: calc(50% - 0.35rem);
-  }
-  .card img {
-    height: 160px;
-    object-fit: contain;
-  }
-  /* en pantallas muy pequeñas, reducimos aún más el badge para que quepa junto al título */
-  .results-badge { padding:.28rem .46rem; font-size:0.72rem; gap:.4rem; }
-  .results-text .label{ font-size:0.56rem; }
-  .results-text .count{ font-size:0.82rem; }
-  /* Si la pantalla es extremadamente angosta, el panel volverá a alinearse a la derecha */
-  .results-panel { left: auto; right: 0; top: calc(100% + .35rem); min-width:200px; max-width:260px; }
+    /* ajuste extra para pantallas muy pequeñas (≤420px) */
+    @media (max-width: 420px) {
+      header > :not(h1):not(.results-wrapper) {
+        flex: 0 0 calc(50% - 0.35rem);
+        max-width: calc(50% - 0.35rem);
+      }
+      .card img {
+        height: 160px;
+        object-fit: contain;
+      }
+      /* en pantallas muy pequeñas, reducimos aún más el badge para que quepa junto al título */
+      .results-badge { padding:.28rem .46rem; font-size:0.72rem; gap:.4rem; }
+      .results-text .label{ font-size:0.56rem; }
+      .results-text .count{ font-size:0.82rem; }
+      /* Si la pantalla es extremadamente angosta, el panel volverá a alinearse a la derecha */
+      .results-panel { left: auto; right: 0; top: calc(100% + .35rem); min-width:200px; max-width:260px; }
 
-  /* reduces aún más selects/inputs en pantallas muy pequeñas */
-  header select, header input {
-    padding: .24rem .4rem;
-    font-size: .82rem;
-  }
-  .mobile-select-popup { max-height: 140px; font-size: 0.82rem; }
-  .mobile-select-popup .opt { padding: .18rem .3rem; font-size: 0.78rem; }
-}
+      /* reduces aún más selects/inputs en pantallas muy pequeñas */
+      header select, header input {
+        padding: .24rem .4rem;
+        font-size: .82rem;
+      }
+      .mobile-select-popup { max-height: 140px; font-size: 0.82rem; }
+      .mobile-select-popup .opt { padding: .18rem .3rem; font-size: 0.78rem; }
+    }
 
     /* Animación del gradiente para el título (Archinime) */
     @keyframes gradientMove {
@@ -413,11 +427,12 @@
       50%  { background-position: 100% 50%; }
       100% { background-position: 0% 50%; }
     }
-@media (max-width: 780px) {
-  .container{
-    margin: 1rem auto 1rem;   /* espacio superior aún menor en móviles */
-    padding: 0 0.9rem;
-  }
+    @media (max-width: 780px) {
+      .container{
+        margin: 1rem auto 1rem;   /* espacio superior aún menor en móviles */
+        padding: 0 0.9rem;
+      }
+    }
 
   </style>
   <style>
@@ -457,7 +472,6 @@
       <img id="logo" src="Logo_Archinime.png" alt="Logo Archinime">
       Archinime
     </h1>
-
 
     <select id="genre-select" onchange="filtro()">
       <option value="">Todos los géneros</option>
