--- a/video-player.html
+++ b/video-player.html
@@ -1802,8 +1802,8 @@
           "2": { link:'https://www.dropbox.com/scl/fi/acz9cphi61rzvdlkdz1uw/Hazbin-Hotel-T2-Cap-2.mp4?rlkey=hzhchz0y7qsb26rww62kzmlzc&st=h6doo23f&raw=1', link2: 'https://drive.google.com/file/d/1kAHa91tZutKELb1-UlywxcR-fGfLrhXd/preview', title:'Hazbin Hotel T2 Cap 2' },
           "3": { link:'https://www.dropbox.com/scl/fi/tlz1vgmxueea8j3qcwtnu/Hazbin-Hotel-T2-Cap-3.mp4?rlkey=yf7c7p50tzfnlbx3aktaye6u5&st=5aafop46&raw=1', link2: 'https://drive.google.com/file/d/1p8lbr89-Jnf_hIel1duWzuLWrNAB6vB8/preview', title:'Hazbin Hotel T2 Cap 3' },
           "4": { link:'https://www.dropbox.com/scl/fi/s4k5r19nf89i9naxgw0y0/Hazbin-Hotel-T2-Cap-4.mp4?rlkey=pcns0hcwzqloko61r2dd2qbb9&st=rw71n1z5&raw=1', link2: 'https://drive.google.com/file/d/18OqiAdW3bY5pdcv-VYsPOrbqiZEzisI0/preview', title:'Hazbin Hotel T2 Cap 4' },
-          "5": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 5' },
-          "6": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 6' },
+          "5": { link:'https://www.dropbox.com/scl/fi/7i5ef3ptq74xyx8vuh48k/Hazbin-Hotel-T2-Cap-5.mp4?rlkey=vp6ur1n966jporyd40yi6shb9&st=lrntinza&raw=1', link2: 'https://drive.google.com/file/d/1oEBrgMsGjOkiu8vmEmkAaCjh9Qt-15nb/preview', title:'Hazbin Hotel T2 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/xd22w4fds4r7yse21lt3d/Hazbin-Hotel-T2-Cap-6.mp4?rlkey=m9wdsj3deg5qx0p2ck00sbi9s&st=6ah1qvdb&raw=1', link2: 'https://drive.google.com/file/d/1gXcYo2Av5UX-VlaO3FnCxA9wQNgds_bP/preview', title:'Hazbin Hotel T2 Cap 6' },
           "7": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 7' },
           "8": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 8' },
         }
