--- a/index.html
+++ b/index.html
@@ -119,10 +119,10 @@
       <span class="social-inline" id="social-inline" title="Síguenos">
         <!-- Usa srcset si tienes versiones @2x/@3x -->
         <button id="youtube-btn" type="button" aria-label="Abrir YouTube en nueva pestaña" onclick="openInNewTab('https://www.youtube.com/@Archinime-k2g')">
-          <img src="youtube.jpg" srcset="youtube@2x.jpg 2x, youtube@3x.jpg 3x" alt="YouTube">
+          <img src="youtube.jpg" 
         </button>
         <button id="tiktok-btn" type="button" aria-label="Abrir TikTok en nueva pestaña" onclick="openInNewTab('https://www.tiktok.com/@archinime?_t=ZS-8zGoKE4IqLw&_r=1')">
-          <img src="tiktok.jpg" srcset="tiktok@2x.jpg 2x, tiktok@3x.jpg 3x" alt="TikTok">
+          <img src="tiktok.jpg" 
         </button>
       </span>
     </h1>
