--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
   <script>
     /* ----------------------------
-       UTILIDADES
+       FUNCIONES Y DATOS (lógica conservada, con optimizaciones)
        ---------------------------- */
     function openInNewTab(url) {
       const win = window.open(url, '_blank', 'noopener,noreferrer');
@@ -241,6 +241,8 @@
       return win;
     }
     function normalizeText(s) { return String(s || '').normalize('NFD').replace(/[\u0300-\u036f]/g, '').toLowerCase(); }
+
+    /* --- Añadí sólo esta función para mostrar en orden aleatorio --- */
     function shuffleArray(arr){
       const a = arr.slice();
       for (let i = a.length - 1; i > 0; i--) {
@@ -249,8 +251,6 @@
       }
       return a;
     }
-    function isTabletScreen(){ return window.matchMedia && window.matchMedia('(min-width:768px) and (max-width:1024px)').matches; }
-    function isMobileScreenSmall(){ return window.matchMedia && window.matchMedia('(max-width:767px)').matches; }
 
     /* ----------------------------
        Datos de animes (igual que antes)
@@ -309,6 +309,7 @@
       {id:51, title:"My Hero Academia", aliases: ["Boku no Hero"], img:"sgsgsdseg.jpg", rating:4.7, genres:["Superhéroes","Ciencia ficción","Comedia","Drama","Acción","Fantasía","Escolar","Aventura","Shōnen"]},
       {id:52, title:"Kakkou no Linazuke", aliases: ["A Couple of Cuckoos"], img:"pordf.jpg", rating:4.5, genres:["Romance","Comedia","Escolar","Harem","Shōnen"]},
     ];
+
 
     /* ----------------------------
        Renderizado: conservador pero mejorando carga de imágenes
@@ -376,7 +377,6 @@
       });
 
       let resultList = filtrados.slice();
-      // Si hay búsqueda, priorizamos matches como antes
       if (qn) {
         resultList.sort((A,B)=>{
           const titlesA = [A.title].concat(A.aliases||[]).map(t=>normalizeText(t));
@@ -388,21 +388,14 @@
           return na < nb ? -1 : na > nb ? 1 : 0;
         });
       } else {
-        // Si NO hay búsqueda ni filtros, mostramos en orden ALEATORIO (tu pedido)
-        const noFiltersActive = !g && !d && !cat;
-        if (noFiltersActive) {
-          resultList = shuffleArray(resultList);
-        } else {
-          // mantener orden por título si hay filtros pero no búsqueda
-          resultList.sort((A,B)=> normalizeText(A.title) < normalizeText(B.title) ? -1 : normalizeText(A.title) > normalizeText(B.title) ? 1 : 0);
-        }
+        resultList.sort((A,B)=> normalizeText(A.title) < normalizeText(B.title) ? -1 : normalizeText(A.title) > normalizeText(B.title) ? 1 : 0);
       }
 
       render(resultList);
       updateResultsCount(resultList.length);
     }
 
-    // inicial: renderizamos en orden aleatorio por defecto
+    // inicial -> ahora en orden ALEATORIO
     render(shuffleArray(animes));
     updateResultsCount(animes.length);
 
@@ -418,23 +411,26 @@
     /* ----------------------------
        Mobile custom popup for selects (compact)
        ---------------------------- */
+    function isMobileScreen(){ return window.matchMedia && window.matchMedia('(max-width:780px)').matches; }
+
     (function setupMobileSelectPopups(){
       const selects = ['genre-select','demographic-select','rating-select'].map(id=>document.getElementById(id)).filter(Boolean);
       let activePopup = null;
       function closePopup(){ if (activePopup && activePopup.popup) { activePopup.popup.remove(); activePopup = null; } }
       function onOutsideClick(e){ if (!activePopup) return; if (!activePopup.popup.contains(e.target) && e.target !== activePopup.el) closePopup(); }
       window.addEventListener('resize', closePopup, {passive:true});
+      // scroll listener as passive+capture to reduce layout thrash
       document.addEventListener('scroll', closePopup, {passive:true, capture:true});
       document.addEventListener('click', onOutsideClick);
 
       selects.forEach(sel => {
         sel.addEventListener('touchstart', function(ev){
-          if (!isMobileScreenSmall()) return;
+          if (!isMobileScreen()) return;
           ev.preventDefault();
           openMobilePopupFor(sel);
         }, {passive:false});
         sel.addEventListener('mousedown', function(ev){
-          if (!isMobileScreenSmall()) return;
+          if (!isMobileScreen()) return;
           ev.preventDefault();
           openMobilePopupFor(sel);
         });
@@ -554,6 +550,8 @@
       { id: 'rem',  src: 'rem.mp4',  preset: { threshold: 0.18, diff: 0, soft: 100  } }
     ];
 
+    function isMobileScreenSmall(){ return window.matchMedia && window.matchMedia('(max-width:767px)').matches; }
+
     function pickRandomVideo(excludeId){
       if (!videoList || videoList.length === 0) return null;
       if (videoList.length === 1) return videoList[0];
@@ -574,7 +572,6 @@
       let maxW = Math.min(window.innerWidth * 0.32, 360);
       let maxH = Math.min(window.innerHeight * 0.4, 640);
 
-      // Ajustes especiales para móvil pequeño (mantener)
       if (isMobileScreenSmall()) {
         if (infoObj && infoObj.id === 'rem') {
           maxW = Math.min(window.innerWidth * 0.30, 180);
@@ -586,10 +583,6 @@
           maxW = Math.min(window.innerWidth * 0.45, 260);
           maxH = Math.min(window.innerHeight * 0.45, 420);
         }
-      } else if (isTabletScreen() && infoObj && infoObj.id === 'hola') {
-        // --- NUEVO: reducción específica para tablet al reproducir "hola"
-        maxW = Math.min(window.innerWidth * 0.22, 240);
-        maxH = Math.min(window.innerHeight * 0.30, 300);
       } else {
         maxW = Math.min(window.innerWidth * 0.32, 360);
         maxH = Math.min(window.innerHeight * 0.4, 640);
