--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
     /* título y logo */
     header h1{
-      cursor:default; display:flex; align-items:center; gap:.6rem; font-size:1.8rem; font-weight:800;
+      cursor:pointer; display:flex; align-items:center; gap:.6rem; font-size:1.8rem; font-weight:800;
       background: linear-gradient(135deg, #00fff7, #ff00cc, #ffd700);
       -webkit-background-clip:text; background-clip:text; -webkit-text-fill-color:transparent;
       white-space:nowrap; flex:0 0 auto; animation: gradientMove 6s ease infinite;
     }
-    header h1 img#logo { width:42px; height:42px; object-fit:contain; border-radius:6px; display:block; cursor:pointer; }
+    header h1 img#logo { width:42px; height:42px; object-fit:contain; border-radius:6px; display:block; }
 
     /* Social inline next to title - ahora CIRCULAR */
     .social-inline { display:flex; align-items:center; gap:.5rem; margin-left:.4rem; flex:0 0 auto; }
@@ -113,16 +113,16 @@
   <audio id="bg-music" autoplay></audio>
 
   <header>
-    <h1>
-      <img id="logo" src="Logo_Archinime.png" alt="Logo Archinime" onclick="location.reload()" title="Recargar página">
+    <h1 onclick="location.reload()">
+      <img id="logo" src="Logo_Archinime.png" alt="Logo Archinime">
       Archinime
       <span class="social-inline" id="social-inline" title="Síguenos">
-        <!-- Botones: abrimos en nueva pestaña y evitamos que la pulsación burbujee al header -->
-        <button id="youtube-btn" type="button" aria-label="Abrir YouTube en nueva pestaña" onclick="(function(e){ e.stopPropagation(); openInNewTab('https://www.youtube.com/@Archinime-k2g'); })(event)">
-          <img src="youtube.jpg" alt="YouTube" loading="lazy" decoding="async">
+        <!-- Usa srcset si tienes versiones @2x/@3x -->
+        <button id="youtube-btn" type="button" aria-label="Abrir YouTube en nueva pestaña" onclick="openInNewTab('https://www.youtube.com/@Archinime-k2g')">
+          <img src="youtube.jpg" 
         </button>
-        <button id="tiktok-btn" type="button" aria-label="Abrir TikTok en nueva pestaña" onclick="(function(e){ e.stopPropagation(); openInNewTab('https://www.tiktok.com/@archinime?_t=ZS-8zGoKE4IqLw&_r=1'); })(event)">
-          <img src="tiktok.jpg" alt="TikTok" loading="lazy" decoding="async">
+        <button id="tiktok-btn" type="button" aria-label="Abrir TikTok en nueva pestaña" onclick="openInNewTab('https://www.tiktok.com/@archinime?_t=ZS-8zGoKE4IqLw&_r=1')">
+          <img src="tiktok.jpg" 
         </button>
       </span>
     </h1>
@@ -131,7 +131,6 @@
     <div class="controls" id="controls">
       <select id="genre-select" onchange="filtro()" aria-label="Seleccionar género">
         <option value="">Todos los géneros</option>
-        <!-- ... tus opciones ... -->
         <option>Acción</option>
         <option>Animación</option>
         <option>Aventura</option>
@@ -233,24 +232,14 @@
 
   <script>
     /* ----------------------------
-       FUNCIONES Y DATOS (lógica conservada, con optimizaciones)
+       FUNCIONES Y DATOS (lógica conservada)
        ---------------------------- */
     function openInNewTab(url) {
       const win = window.open(url, '_blank', 'noopener,noreferrer');
-      try { setTimeout(() => { if (typeof window.focus === 'function') win && win.focus(); }, 100); } catch(e){ console.warn(e); }
+      try { setTimeout(() => { if (typeof window.focus === 'function') window.focus(); }, 100); } catch(e){ console.warn(e); }
       return win;
     }
     function normalizeText(s) { return String(s || '').normalize('NFD').replace(/[\u0300-\u036f]/g, '').toLowerCase(); }
-
-    /* --- Añadí sólo esta función para mostrar en orden aleatorio --- */
-    function shuffleArray(arr){
-      const a = arr.slice();
-      for (let i = a.length - 1; i > 0; i--) {
-        const j = Math.floor(Math.random() * (i + 1));
-        [a[i], a[j]] = [a[j], a[i]];
-      }
-      return a;
-    }
 
     /* ----------------------------
        Datos de animes (igual que antes)
@@ -311,9 +300,6 @@
     ];
 
 
-    /* ----------------------------
-       Renderizado: conservador pero mejorando carga de imágenes
-       ---------------------------- */
     function render(list) {
       const grid = document.getElementById('grid');
       if (!list || list.length === 0) {
@@ -335,16 +321,12 @@
         });
         return;
       }
-
-      // Usamos atributos de carga diferida para evitar picos de memoria/CPU
       grid.innerHTML = list.map(a => `
         <div class="card" onclick="location='anime-detail.html?id=${a.id}'" role="link" tabindex="0">
-          <img src="${a.img}" alt="${a.title}" loading="lazy" decoding="async">
+          <img src="${a.img}" alt="${a.title}">
           <div class="info"><strong>${a.title}</strong><span>⭐ ${a.rating ? (a.rating.toFixed? a.rating.toFixed(1): a.rating) : '—'}</span></div>
         </div>
       `).join('');
-
-      // IntersectionObserver para animar aparición (tiene impacto mínimo)
       const observer = new IntersectionObserver(entries => {
         entries.forEach(e => { if (e.isIntersecting) { e.target.classList.add('visible'); observer.unobserve(e.target); } });
       }, {threshold:0.2});
@@ -395,8 +377,8 @@
       updateResultsCount(resultList.length);
     }
 
-    // inicial -> ahora en orden ALEATORIO
-    render(shuffleArray(animes));
+    // inicial
+    render(animes);
     updateResultsCount(animes.length);
 
     document.getElementById('search').addEventListener('input', debouncedFiltro);
@@ -409,7 +391,7 @@
     if (demoEl) demoEl.addEventListener('change', filtro);
 
     /* ----------------------------
-       Mobile custom popup for selects (compact)
+       Mobile custom popup for selects (compact options)
        ---------------------------- */
     function isMobileScreen(){ return window.matchMedia && window.matchMedia('(max-width:780px)').matches; }
 
@@ -418,9 +400,8 @@
       let activePopup = null;
       function closePopup(){ if (activePopup && activePopup.popup) { activePopup.popup.remove(); activePopup = null; } }
       function onOutsideClick(e){ if (!activePopup) return; if (!activePopup.popup.contains(e.target) && e.target !== activePopup.el) closePopup(); }
-      window.addEventListener('resize', closePopup, {passive:true});
-      // scroll listener as passive+capture to reduce layout thrash
-      document.addEventListener('scroll', closePopup, {passive:true, capture:true});
+      window.addEventListener('resize', closePopup);
+      document.addEventListener('scroll', closePopup, true);
       document.addEventListener('click', onOutsideClick);
 
       selects.forEach(sel => {
@@ -526,7 +507,7 @@
     });
 
     /* ----------------------------
-       Chroma + FG logic + fuegos artificiales (mejoras de rendimiento)
+       Chroma + FG logic + fuegos artificiales (completo)
        ---------------------------- */
     const fgContainer = document.getElementById('fgContainer');
     const fgCanvas = document.getElementById('fgCanvas');
@@ -543,7 +524,6 @@
     let currentVideoObj = null;
     let lastObjectUrl = null;
     let isAnimatingExplosion = false;
-    let visibilityPaused = false;
 
     const videoList = [
       { id: 'hola', src: 'hola.mp4', preset: { threshold: 0.25, diff: 0, soft: 100 } },
@@ -633,7 +613,7 @@
     }
 
     function processLoop(video, infoObj){
-      if (!usingChroma || visibilityPaused) { animationId = requestAnimationFrame(()=>processLoop(video, infoObj)); return; }
+      if (!usingChroma) return;
       if (video.paused || video.ended) { animationId = requestAnimationFrame(()=>processLoop(video, infoObj)); return; }
       if (video.videoWidth && video.videoHeight && (off.width !== Math.min(video.videoWidth,1280) || off.height !== Math.min(video.videoHeight,1280))) {
         off.width = Math.min(video.videoWidth,1280); off.height = Math.min(video.videoHeight,1280);
@@ -694,7 +674,7 @@
         fctx.setTransform(devicePixelRatio,0,0,devicePixelRatio,0,0);
       }
     }
-    window.addEventListener('resize', resizeFireCanvas, {passive:true});
+    window.addEventListener('resize', resizeFireCanvas);
     setTimeout(resizeFireCanvas, 120);
 
     function random(min, max){ return Math.random()*(max-min)+min; }
@@ -800,7 +780,7 @@
         fgVideo.style.display = 'none';
         fgVideo.play().catch(()=>{});
         bgVideo.play().catch(()=>{});
-        if (!animationId && usingChroma && !visibilityPaused) animationId = requestAnimationFrame(()=>processLoop(fgVideo, infoObj));
+        if (!animationId && usingChroma) animationId = requestAnimationFrame(()=>processLoop(fgVideo, infoObj));
         showContainer();
       };
 
@@ -836,45 +816,24 @@
       try { bgMusic.play().catch(()=>{}); } catch(e){}
     });
 
-    // Throttled resize para evitar trabajo repetido
-    let resizeRaf = null;
-    window.addEventListener('resize', ()=> {
-      if (resizeRaf) return;
-      resizeRaf = requestAnimationFrame(()=> {
-        resizeFireCanvas();
-        if (currentVideoObj && fgVideo.videoWidth && fgVideo.videoHeight) {
-          adjustContainerToVideo(fgVideo, currentVideoObj);
-        }
-        resizeRaf = null;
-      });
-    }, {passive:true});
-
-    // Pausar procesamiento pesado cuando pestaña no visible para evitar lag
-    document.addEventListener('visibilitychange', ()=> {
-      if (document.hidden) {
-        visibilityPaused = true;
-        if (animationId) { cancelAnimationFrame(animationId); animationId = null; }
-        // dejamos los vídeos en segundo plano (opción: pausar si quieres)
-      } else {
-        visibilityPaused = false;
-        if (usingChroma && fgVideo && !animationId) {
-          animationId = requestAnimationFrame(()=>processLoop(fgVideo, currentVideoObj));
-        }
-      }
-    }, {passive:true});
-
     function init(){
       fgContainer.style.display = 'none'; fgCanvas.style.display = 'none'; fgVideo.style.display = 'none';
       const first = pickRandomVideo(null);
       if (!first) return;
       playVideoClip(first);
+
+      window.addEventListener('resize', ()=>{
+        resizeFireCanvas();
+        if (currentVideoObj && fgVideo.videoWidth && fgVideo.videoHeight) {
+          adjustContainerToVideo(fgVideo, currentVideoObj);
+        }
+      });
     }
 
     init();
 
     window.addEventListener('beforeunload', ()=>{ if (lastObjectUrl) try{ URL.revokeObjectURL(lastObjectUrl); } catch(e){}; });
 
-    /* FIN del script */
   </script>
 </body>
 </html>
